// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventList when the data is loading renders as expected 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={4}
  >
    <WithStyles(SkeletonEvent) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={4}
  >
    <WithStyles(SkeletonEvent) />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={4}
  >
    <WithStyles(SkeletonEvent) />
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`EventList when the server returns an error renders as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  xs={8}
>
  Some error
</WithStyles(ForwardRef(Grid))>
`;

exports[`EventList when the server returns data and the user has events renders as expected 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="1"
    style={
      Object {
        "display": "flex",
      }
    }
    xs={6}
  >
    <WithStyles(Event)
      eventId={1}
      location=""
      rsvpStatus="NONE"
      startTime={1657691025566}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`EventList when the server returns data and the user has no events renders as expected 1`] = `
<Fragment>
  No events scheduled
</Fragment>
`;

exports[`EventList when the server returns data renders as expected 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="1"
    style={
      Object {
        "display": "flex",
      }
    }
    xs={6}
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      startTime={1657691025566}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`EventList when the server returns data when the event has a location renders as expected 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="1"
    style={
      Object {
        "display": "flex",
      }
    }
    xs={6}
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      startTime={1657691025566}
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`EventList when the server returns data when the event has no start time renders as expected 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="1"
    style={
      Object {
        "display": "flex",
      }
    }
    xs={6}
  >
    <WithStyles(Event)
      eventId={1}
      location="test location"
      locationMapsUrl="url"
      rsvpStatus="NONE"
      teamId={1}
      teamPhotoUrl="url"
      title="test"
    />
  </WithStyles(ForwardRef(Grid))>
</Fragment>
`;

exports[`EventList when the server returns no data renders as expected 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  xs={8}
>
  Some error
</WithStyles(ForwardRef(Grid))>
`;
